Add tests for image service