@@ -27,6 +27,7 @@ dependencies {
     implementation("io.jsonwebtoken:jjwt:0.12.6")
 	testImplementation("org.springframework.boot:spring-boot-starter-test")
 	testImplementation("org.jetbrains.kotlin:kotlin-test-junit5")
+    testImplementation("io.mockk:mockk:1.14.5")
 	testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 }
 
@@ -38,4 +39,10 @@ kotlin {
 
 tasks.withType<Test> {
 	useJUnitPlatform()
+}
+
+tasks {
+    test {
+        jvmArgs("-XX:+EnableDynamicAgentLoading")
+    }
 }
